--- a/cyczp.html
+++ b/cyczp.html
@@ -125,7 +125,9 @@
 <li class="chapter" data-level="2.11" data-path="jbcsp-.html"><a href="jbcsp-.html#section-2.11"><i class="fa fa-check"></i><b>2.11</b> 禁忌和审核</a></li>
 <li class="chapter" data-level="2.12" data-path="jbcsp-.html"><a href="jbcsp-.html#section-2.12"><i class="fa fa-check"></i><b>2.12</b> 延伸阅读：自动点赞 </a></li>
 <li class="chapter" data-level="2.13" data-path="jbcsp-.html"><a href="jbcsp-.html#5"><i class="fa fa-check"></i><b>2.13</b> 延伸阅读：评论中的5点禁忌 </a></li>
-<li class="chapter" data-level="2.14" data-path="jbcsp-.html"><a href="jbcsp-.html#shadowsocks"><i class="fa fa-check"></i><b>2.14</b> 延伸阅读：如何傻瓜式使用shadowsocks科学上网 </a></li>
+<li class="chapter" data-level="2.14" data-path="jbcsp-.html"><a href="jbcsp-.html#shadowsocks"><i class="fa fa-check"></i><b>2.14</b> 延伸阅读：如何傻瓜式使用shadowsocks科学上网 </a><ul>
+<li class="chapter" data-level="2.14.1" data-path="jbcsp-.html"><a href="jbcsp-.html#dapengsteemit-github"><i class="fa fa-check"></i><b>2.14.1</b> 如何参与dapeng《Steemit 教程》Github多人写作 </a></li>
+</ul></li>
 </ul></li>
 <li class="chapter" data-level="3" data-path="cyczp.html"><a href="cyczp.html"><i class="fa fa-check"></i><b>3</b> 常用操作</a><ul>
 <li class="chapter" data-level="3.1" data-path="cyczp.html"><a href="cyczp.html#section-3.1"><i class="fa fa-check"></i><b>3.1</b> 关于互动的一切 </a></li>
@@ -385,7 +387,7 @@
 <div id="cyczp" class="section level1">
 <h1><span class="header-section-number">第3章</span> 常用操作</h1>
 <div id="section-3.1" class="section level2">
-<h2><span class="header-section-number">3.1</span> 关于互动的一切 <a href="#fn27" class="footnote-ref" id="fnref27"><sup>27</sup></a></h2>
+<h2><span class="header-section-number">3.1</span> 关于互动的一切 <a href="#fn28" class="footnote-ref" id="fnref28"><sup>28</sup></a></h2>
 <p>小雅对于在Steemit社区里面的互动，非常的积极。</p>
 <p>她看文章都非常的认真，看完也会认真的回复。因为她觉得，别人用心写了文章，自己就要用同样的心情对待。认真的看和认真的回复是基本的基本。不过偶尔她也会看到一些非常不用心写的口水文，这个时候她就非常想要去踩一脚，不过很多时候她都忍住了，因为她还只是一只浮游生物，踩人的效果差不说，还容易得罪人。</p>
 <p>小雅还发现这里经常会举办各种各样的活动，比如奖励丰厚的月旦评。小雅参加了好几期的月旦评，虽然都没有获奖，但是参加活动让她认识了许许多多的新朋友，这让她感到非常的愉快和满足。</p>
@@ -408,7 +410,7 @@ steemit社区有着各种各样的征文活动，如cn区的“月旦评”（#c
 </ul>
 </div>
 <div id="section-3.2" class="section level2">
-<h2><span class="header-section-number">3.2</span> 关于提款的一切 <a href="#fn28" class="footnote-ref" id="fnref28"><sup>28</sup></a></h2>
+<h2><span class="header-section-number">3.2</span> 关于提款的一切 <a href="#fn29" class="footnote-ref" id="fnref29"><sup>29</sup></a></h2>
 <p>随着小雅在Steemit社区的默默耕耘，小雅的钱包日渐丰厚了起来，现在已经有3个SBD那么多了。这让小雅很是高兴，虽然钱不多，但是这点钱是自己努力的证明。</p>
 <p>不过有钱了，另外一个烦恼又出现了，这里的钱币如何换成能够通用的法币呢？小雅抱着疑问去调查了一番，别人给出的答案是要先转到交易所，然后通过把SBD换成别的数字货币后卖出。大神们还给了一大串乱七八糟的数字货币名字给小雅，什么BTC、ETH、BTS云云，听的小雅一个头两个大。</p>
 <p>最终，小雅还是没搞明白如何把钱提出来。不过小雅很快释然了，反正钱不多，就先放着吧，等到自己有100个SBD再去提款吧。</p>
@@ -465,7 +467,7 @@ Memo 币安显示的备注信息
 </div>
 </div>
 <div id="section-3.3" class="section level2">
-<h2><span class="header-section-number">3.3</span> 关于密码的一切 <a href="#fn29" class="footnote-ref" id="fnref29"><sup>29</sup></a></h2>
+<h2><span class="header-section-number">3.3</span> 关于密码的一切 <a href="#fn30" class="footnote-ref" id="fnref30"><sup>30</sup></a></h2>
 <p>小雅收到了一个好消息和一个坏消息。</p>
 <p>好消息是小雅通过努力，获得了月旦评的一等奖，这让小雅兴奋了一个晚上。</p>
 <p>坏消息是小雅的账号被盗了，她的账号无法登陆，同时自己辛苦赚来的钱也不翼而飞。</p>
@@ -508,7 +510,7 @@ Memo 币安显示的备注信息
 </ol>
 </div>
 <div id="how-to-recover-your-key" class="section level2">
-<h2><span class="header-section-number">3.4</span> 延伸阅读：如何恢复你被盗的Steem帐号？ <a href="#fn30" class="footnote-ref" id="fnref30"><sup>30</sup></a></h2>
+<h2><span class="header-section-number">3.4</span> 延伸阅读：如何恢复你被盗的Steem帐号？ <a href="#fn31" class="footnote-ref" id="fnref31"><sup>31</sup></a></h2>
 <p><strong>结论</strong></p>
 <p>首先Steem帐号是可以被恢复的，但需要满足以下两个条件：</p>
 <ol style="list-style-type: decimal">
@@ -564,11 +566,11 @@ recover_account &quot;skenan&quot; { &quot;weight_threshold&quot;: 1,&quot;accou
 </div>
 <div class="footnotes">
 <hr />
-<ol start="27">
-<li id="fn27"><p>作者:@hepeng.chn;小故事:@maiyude;编辑:@maiyude;<a href="cyczp.html#fnref27" class="footnote-back">↩</a></p></li>
-<li id="fn28"><p>作者:@lixing;小故事:@maiyude;编辑:@maiyude;原文链接:<a href="https://steemit.com/cn/@lixing/or-steemit-steem" class="uri">https://steemit.com/cn/@lixing/or-steemit-steem</a><a href="cyczp.html#fnref28" class="footnote-back">↩</a></p></li>
-<li id="fn29"><p>作者:@maiyude;<a href="cyczp.html#fnref29" class="footnote-back">↩</a></p></li>
-<li id="fn30"><p>作者:@skenan;编辑:@maiyude;原文链接：<a href="https://steemit.com/cn/@skenan/steem" class="uri">https://steemit.com/cn/@skenan/steem</a><a href="cyczp.html#fnref30" class="footnote-back">↩</a></p></li>
+<ol start="28">
+<li id="fn28"><p>作者:@hepeng.chn;小故事:@maiyude;编辑:@maiyude;<a href="cyczp.html#fnref28" class="footnote-back">↩</a></p></li>
+<li id="fn29"><p>作者:@lixing;小故事:@maiyude;编辑:@maiyude;原文链接:<a href="https://steemit.com/cn/@lixing/or-steemit-steem" class="uri">https://steemit.com/cn/@lixing/or-steemit-steem</a><a href="cyczp.html#fnref29" class="footnote-back">↩</a></p></li>
+<li id="fn30"><p>作者:@maiyude;<a href="cyczp.html#fnref30" class="footnote-back">↩</a></p></li>
+<li id="fn31"><p>作者:@skenan;编辑:@maiyude;原文链接：<a href="https://steemit.com/cn/@skenan/steem" class="uri">https://steemit.com/cn/@skenan/steem</a><a href="cyczp.html#fnref31" class="footnote-back">↩</a></p></li>
 </ol>
 </div>
             </section>
