--- a/fl.html
+++ b/fl.html
@@ -125,7 +125,9 @@
 <li class="chapter" data-level="2.11" data-path="jbcsp-.html"><a href="jbcsp-.html#section-2.11"><i class="fa fa-check"></i><b>2.11</b> 禁忌和审核</a></li>
 <li class="chapter" data-level="2.12" data-path="jbcsp-.html"><a href="jbcsp-.html#section-2.12"><i class="fa fa-check"></i><b>2.12</b> 延伸阅读：自动点赞 </a></li>
 <li class="chapter" data-level="2.13" data-path="jbcsp-.html"><a href="jbcsp-.html#5"><i class="fa fa-check"></i><b>2.13</b> 延伸阅读：评论中的5点禁忌 </a></li>
-<li class="chapter" data-level="2.14" data-path="jbcsp-.html"><a href="jbcsp-.html#shadowsocks"><i class="fa fa-check"></i><b>2.14</b> 延伸阅读：如何傻瓜式使用shadowsocks科学上网 </a></li>
+<li class="chapter" data-level="2.14" data-path="jbcsp-.html"><a href="jbcsp-.html#shadowsocks"><i class="fa fa-check"></i><b>2.14</b> 延伸阅读：如何傻瓜式使用shadowsocks科学上网 </a><ul>
+<li class="chapter" data-level="2.14.1" data-path="jbcsp-.html"><a href="jbcsp-.html#dapengsteemit-github"><i class="fa fa-check"></i><b>2.14.1</b> 如何参与dapeng《Steemit 教程》Github多人写作 </a></li>
+</ul></li>
 </ul></li>
 <li class="chapter" data-level="3" data-path="cyczp.html"><a href="cyczp.html"><i class="fa fa-check"></i><b>3</b> 常用操作</a><ul>
 <li class="chapter" data-level="3.1" data-path="cyczp.html"><a href="cyczp.html#section-3.1"><i class="fa fa-check"></i><b>3.1</b> 关于互动的一切 </a></li>
@@ -411,7 +413,7 @@
 <p>the end</p>
 </div>
 <div id="section-17.1.2" class="section level3">
-<h3><span class="header-section-number">17.1.2</span> “有胆评”写作计划 <a href="#fn100" class="footnote-ref" id="fnref100"><sup>100</sup></a></h3>
+<h3><span class="header-section-number">17.1.2</span> “有胆评”写作计划 <a href="#fn101" class="footnote-ref" id="fnref101"><sup>101</sup></a></h3>
 <p>1</p>
 <p>2018 年马上要来了。我被 @towardsthesun 点名写个 2018 年计划。谢谢。</p>
 <p>要不是 @towardsthesun 留言提醒，我可能还不知道。因为我一直用 <a href="https://mentions.steemdata.com/find?q=%20@dapeng">steemdata mentions</a> 来查老师留的作业，但是这网站显示最近没作业啊？——如果错过了你留的作业，请莫要见怪，我实在是没看见。 @kona 留给我的黑白摄影作业我还没做呢。</p>
@@ -482,7 +484,7 @@
 <p>你，准备好了吗？</p>
 </div>
 <div id="deanliu" class="section level3">
-<h3><span class="header-section-number">17.1.3</span> @deanliu：关于大长腿杀人鲸刘美女的一切 <a href="#fn101" class="footnote-ref" id="fnref101"><sup>101</sup></a></h3>
+<h3><span class="header-section-number">17.1.3</span> @deanliu：关于大长腿杀人鲸刘美女的一切 <a href="#fn102" class="footnote-ref" id="fnref102"><sup>102</sup></a></h3>
 <p>昨天我发了个广告，<a href="https://cnsteem.com/cn/@dapeng/or-10-sbd-to-build-a-mirror-site-for-your-own-steem-posts">提供制作 steem 镜像备份网站的有偿服务</a>，第一个报名的就是人称“刘美女”的前辈 @deanliu ，一下订购了三个月的备份服务 。</p>
 <p>刘美女何许人也？新人可能不太了解。刘美女 的 ESP 在 <a href="https://cnsteem.com/steemit/@nationalpark/observation-and-analysis-to-please-the-lord">全网 40 万用户里排名 229</a>，华语区排名前 5，声望 72.35，级别是杀人鲸。一句话：你就知道刘美女是个大腿就好了。</p>
 <p>保持尊重，认真去抱。</p>
@@ -506,7 +508,7 @@
 <p>敢问路在何方？从前辈的帖子里剥茧抽丝，我们就可以看到，一条小鱼成长为大鲸的道路，原来就在我们自己的脚下。</p>
 </div>
 <div id="yingpingzhang" class="section level3">
-<h3><span class="header-section-number">17.1.4</span> @yingpingzhang：爱音乐的人 <a href="#fn102" class="footnote-ref" id="fnref102"><sup>102</sup></a></h3>
+<h3><span class="header-section-number">17.1.4</span> @yingpingzhang：爱音乐的人 <a href="#fn103" class="footnote-ref" id="fnref103"><sup>103</sup></a></h3>
 <p>参加“华语好声音”活动的朋友里，很多是真心爱唱歌。其中有一位比较特别，是 @yingpingzhang 。</p>
 <p>他的歌有原创（如《来时的路》 ），有改编（如《风的季节》《驿动的心》），也有翻唱（如《睡在我上铺的兄弟》《灰姑娘》）。都是自弹自唱，一把吉他，干干净净。我自己只会弹一点吉他，很业余，所以不敢对 @yingpingzhang 的水平妄加评价。但是，我能确定的是， @yingpingzhang 是个真正爱音乐的人。</p>
 <p>他是目前给“好声音”活动投稿最多的人，却是获奖最少的人。每看到这种千里马被埋没的事情，我就很痛心，生怕他哪一天失望地从这里离开，而仅凭我个人有限的能力又挽留不住。</p>
@@ -528,7 +530,7 @@
 </div>
 <div id="nationalpark-" class="section level3">
 <h3><span class="header-section-number">17.1.5</span> @nationalpark: 在这个骗人的舞台上我们能做些什么</h3>
-<p><a href="#fn103" class="footnote-ref" id="fnref103"><sup>103</sup></a></p>
+<p><a href="#fn104" class="footnote-ref" id="fnref104"><sup>104</sup></a></p>
 <p>（1）</p>
 <p>昨晚，@nationalpark 说他要写一篇 steem 白皮书读后感，我就一直很期待。没想到这么快，今早起床就<a href="https://cnsteem.com/cn/@nationalpark/review-of-steem-whitepaper">读到了</a>，大呼过瘾之余，我回忆起刚来 steem 时读 @coldhair 文章的快感。那时我就读过白皮书，早忘干净了，可能是因为当时是新手，走马观花，没读懂吧。</p>
 <p>@nationalpark 是我的前辈——我还没来的时候， 他已经开始<a href="https://cnsteem.com/introduceyourself/@nationalpark/national-park">发旅游贴</a>了；我还在摸索该发什么帖子的时候，他已经在研究<a href="https://cnsteem.com/cn/@nationalpark/hot-trending">什么是 hot 什么是 trending 了</a>；我终于明白新人入门的捷径是发旅游帖的时候，他已经搞明白要在<a href="https://cnsteem.com/cn/@nationalpark/when-to-upvote-within-30min">30分钟内点赞</a>了：我以为我是率先提醒大家注意数据隐私的，其实，比我早一个月的时候，他已经在告诫大家<a href="https://cnsteem.com/cn/@nationalpark/newbie-for-newbies">注意这里没有秘密</a>了。——我还一度提醒他多注意肉身安全，看来是我多虑了。在美国混，他有枪（别惹他）。</p>
@@ -570,7 +572,7 @@
 <p>在 steem 这个骗人的舞台上，我很幸运，有你们这群真诚的人。</p>
 </div>
 <div id="jiangchen" class="section level3">
-<h3><span class="header-section-number">17.1.6</span> @jiangchen：寂寞的原创者 <a href="#fn104" class="footnote-ref" id="fnref104"><sup>104</sup></a></h3>
+<h3><span class="header-section-number">17.1.6</span> @jiangchen：寂寞的原创者 <a href="#fn105" class="footnote-ref" id="fnref105"><sup>105</sup></a></h3>
 <ol style="list-style-type: decimal">
 <li></li>
 </ol>
@@ -638,7 +640,7 @@
 <p>我的回答是：无他，只为展示一个独特的灵魂，就像 @jiangchen。</p>
 </div>
 <div id="dancingapple" class="section level3">
-<h3><span class="header-section-number">17.1.7</span> @dancingapple：舞个苹果折腾地球 <a href="#fn105" class="footnote-ref" id="fnref105"><sup>105</sup></a></h3>
+<h3><span class="header-section-number">17.1.7</span> @dancingapple：舞个苹果折腾地球 <a href="#fn106" class="footnote-ref" id="fnref106"><sup>106</sup></a></h3>
 <ol style="list-style-type: decimal">
 <li></li>
 </ol>
@@ -2720,15 +2722,16 @@ If fortunately, I’ll make some new friends here, maybe they are my coworkers a
 
 
 
+
 <div class="footnotes">
 <hr />
-<ol start="100">
-<li id="fn100"><p>作者：@dapeng，原文链接：<a href="https://steemit.com/cn/@dapeng/2018" class="uri">https://steemit.com/cn/@dapeng/2018</a><a href="fl.html#fnref100" class="footnote-back">↩</a></p></li>
-<li id="fn101"><p>作者：@dapeng，原文链接：<a href="https://steemit.com/cn/@dapeng/deanliu-or-all-bout-deanliu" class="uri">https://steemit.com/cn/@dapeng/deanliu-or-all-bout-deanliu</a><a href="fl.html#fnref101" class="footnote-back">↩</a></p></li>
-<li id="fn102"><p>作者：@dapeng，原文链接：<a href="https://steemit.com/cn/@dapeng/yingpingzhang-or" class="uri">https://steemit.com/cn/@dapeng/yingpingzhang-or</a><a href="fl.html#fnref102" class="footnote-back">↩</a></p></li>
-<li id="fn103"><p>作者：@dapeng，原文链接：<a href="https://steemit.com/cn/@dapeng/nationalpark-or-or-what-can-we-do-on-a-lying-platform" class="uri">https://steemit.com/cn/@dapeng/nationalpark-or-or-what-can-we-do-on-a-lying-platform</a><a href="fl.html#fnref103" class="footnote-back">↩</a></p></li>
-<li id="fn104"><p>作者：@dapeng，原文链接：<a href="https://steemit.com/cn/@dapeng/jiangchen-or" class="uri">https://steemit.com/cn/@dapeng/jiangchen-or</a><a href="fl.html#fnref104" class="footnote-back">↩</a></p></li>
-<li id="fn105"><p>作者：@dapeng，原文链接：<a href="https://steemit.com/cn/@dapeng/dancingapple-steem-or" class="uri">https://steemit.com/cn/@dapeng/dancingapple-steem-or</a><a href="fl.html#fnref105" class="footnote-back">↩</a></p></li>
+<ol start="101">
+<li id="fn101"><p>作者：@dapeng，原文链接：<a href="https://steemit.com/cn/@dapeng/2018" class="uri">https://steemit.com/cn/@dapeng/2018</a><a href="fl.html#fnref101" class="footnote-back">↩</a></p></li>
+<li id="fn102"><p>作者：@dapeng，原文链接：<a href="https://steemit.com/cn/@dapeng/deanliu-or-all-bout-deanliu" class="uri">https://steemit.com/cn/@dapeng/deanliu-or-all-bout-deanliu</a><a href="fl.html#fnref102" class="footnote-back">↩</a></p></li>
+<li id="fn103"><p>作者：@dapeng，原文链接：<a href="https://steemit.com/cn/@dapeng/yingpingzhang-or" class="uri">https://steemit.com/cn/@dapeng/yingpingzhang-or</a><a href="fl.html#fnref103" class="footnote-back">↩</a></p></li>
+<li id="fn104"><p>作者：@dapeng，原文链接：<a href="https://steemit.com/cn/@dapeng/nationalpark-or-or-what-can-we-do-on-a-lying-platform" class="uri">https://steemit.com/cn/@dapeng/nationalpark-or-or-what-can-we-do-on-a-lying-platform</a><a href="fl.html#fnref104" class="footnote-back">↩</a></p></li>
+<li id="fn105"><p>作者：@dapeng，原文链接：<a href="https://steemit.com/cn/@dapeng/jiangchen-or" class="uri">https://steemit.com/cn/@dapeng/jiangchen-or</a><a href="fl.html#fnref105" class="footnote-back">↩</a></p></li>
+<li id="fn106"><p>作者：@dapeng，原文链接：<a href="https://steemit.com/cn/@dapeng/dancingapple-steem-or" class="uri">https://steemit.com/cn/@dapeng/dancingapple-steem-or</a><a href="fl.html#fnref106" class="footnote-back">↩</a></p></li>
 </ol>
 </div>
             </section>
