--- a/jqrp.html
+++ b/jqrp.html
@@ -125,7 +125,9 @@
 <li class="chapter" data-level="2.11" data-path="jbcsp-.html"><a href="jbcsp-.html#section-2.11"><i class="fa fa-check"></i><b>2.11</b> 禁忌和审核</a></li>
 <li class="chapter" data-level="2.12" data-path="jbcsp-.html"><a href="jbcsp-.html#section-2.12"><i class="fa fa-check"></i><b>2.12</b> 延伸阅读：自动点赞 </a></li>
 <li class="chapter" data-level="2.13" data-path="jbcsp-.html"><a href="jbcsp-.html#5"><i class="fa fa-check"></i><b>2.13</b> 延伸阅读：评论中的5点禁忌 </a></li>
-<li class="chapter" data-level="2.14" data-path="jbcsp-.html"><a href="jbcsp-.html#shadowsocks"><i class="fa fa-check"></i><b>2.14</b> 延伸阅读：如何傻瓜式使用shadowsocks科学上网 </a></li>
+<li class="chapter" data-level="2.14" data-path="jbcsp-.html"><a href="jbcsp-.html#shadowsocks"><i class="fa fa-check"></i><b>2.14</b> 延伸阅读：如何傻瓜式使用shadowsocks科学上网 </a><ul>
+<li class="chapter" data-level="2.14.1" data-path="jbcsp-.html"><a href="jbcsp-.html#dapengsteemit-github"><i class="fa fa-check"></i><b>2.14.1</b> 如何参与dapeng《Steemit 教程》Github多人写作 </a></li>
+</ul></li>
 </ul></li>
 <li class="chapter" data-level="3" data-path="cyczp.html"><a href="cyczp.html"><i class="fa fa-check"></i><b>3</b> 常用操作</a><ul>
 <li class="chapter" data-level="3.1" data-path="cyczp.html"><a href="cyczp.html#section-3.1"><i class="fa fa-check"></i><b>3.1</b> 关于互动的一切 </a></li>
@@ -385,7 +387,7 @@
 <div id="jqrp" class="section level1">
 <h1><span class="header-section-number">第12章</span> 机器人</h1>
 <div id="jqrzyxp" class="section level2">
-<h2><span class="header-section-number">12.1</span> 机器人之印象篇 <a href="#fn81" class="footnote-ref" id="fnref81"><sup>81</sup></a></h2>
+<h2><span class="header-section-number">12.1</span> 机器人之印象篇 <a href="#fn82" class="footnote-ref" id="fnref82"><sup>82</sup></a></h2>
 <div id="jqrgn" class="section level3">
 <h3><span class="header-section-number">12.1.1</span> 机器人概念</h3>
 <p>从广义上讲，凡是能够代替人类自动执行指定操作从而完成特定功能的，都可以被称为机器人。机器人可以是机械手、iRobot 等实体，也可以是无形的计算机程序。我们将 Steem 上的机器人定义为：“<strong>能够操控 Steem 帐户执行点赞、留言、发帖、操控内部市场等一个或多个功能的计算机程序</strong>”。不难理解， Steem 机器人往往都是与某个特定 Steem 帐户挂钩的。这就是为什么我们经常会听到“某某帐户是机器人”这一说法。事实上，更准确地表达是“某某帐户的行为是由某一个计算机程序来控制的”。这些计算机程序对读者来说是无形的，它依托 Steem 帐户进行物化。除非特殊说明，我们将沿用这一习惯，<strong>将机器人物化为与计算机程序挂钩的 Steem 帐户</strong>。</p>
@@ -468,8 +470,8 @@
 </div>
 <div class="footnotes">
 <hr />
-<ol start="81">
-<li id="fn81"><p>作者：@wangwenjing；编辑：@dapeng<a href="jqrp.html#fnref81" class="footnote-back">↩</a></p></li>
+<ol start="82">
+<li id="fn82"><p>作者：@wangwenjing；编辑：@dapeng<a href="jqrp.html#fnref82" class="footnote-back">↩</a></p></li>
 </ol>
 </div>
             </section>
