--- a/zysxp.html
+++ b/zysxp.html
@@ -125,7 +125,9 @@
 <li class="chapter" data-level="2.11" data-path="jbcsp-.html"><a href="jbcsp-.html#section-2.11"><i class="fa fa-check"></i><b>2.11</b> 禁忌和审核</a></li>
 <li class="chapter" data-level="2.12" data-path="jbcsp-.html"><a href="jbcsp-.html#section-2.12"><i class="fa fa-check"></i><b>2.12</b> 延伸阅读：自动点赞 </a></li>
 <li class="chapter" data-level="2.13" data-path="jbcsp-.html"><a href="jbcsp-.html#5"><i class="fa fa-check"></i><b>2.13</b> 延伸阅读：评论中的5点禁忌 </a></li>
-<li class="chapter" data-level="2.14" data-path="jbcsp-.html"><a href="jbcsp-.html#shadowsocks"><i class="fa fa-check"></i><b>2.14</b> 延伸阅读：如何傻瓜式使用shadowsocks科学上网 </a></li>
+<li class="chapter" data-level="2.14" data-path="jbcsp-.html"><a href="jbcsp-.html#shadowsocks"><i class="fa fa-check"></i><b>2.14</b> 延伸阅读：如何傻瓜式使用shadowsocks科学上网 </a><ul>
+<li class="chapter" data-level="2.14.1" data-path="jbcsp-.html"><a href="jbcsp-.html#dapengsteemit-github"><i class="fa fa-check"></i><b>2.14.1</b> 如何参与dapeng《Steemit 教程》Github多人写作 </a></li>
+</ul></li>
 </ul></li>
 <li class="chapter" data-level="3" data-path="cyczp.html"><a href="cyczp.html"><i class="fa fa-check"></i><b>3</b> 常用操作</a><ul>
 <li class="chapter" data-level="3.1" data-path="cyczp.html"><a href="cyczp.html#section-3.1"><i class="fa fa-check"></i><b>3.1</b> 关于互动的一切 </a></li>
@@ -385,7 +387,7 @@
 <div id="zysxp" class="section level1">
 <h1><span class="header-section-number">第7章</span> 注意事项</h1>
 <div id="section-7.1" class="section level2">
-<h2><span class="header-section-number">7.1</span> 礼仪规则 <a href="#fn47" class="footnote-ref" id="fnref47"><sup>47</sup></a></h2>
+<h2><span class="header-section-number">7.1</span> 礼仪规则 <a href="#fn48" class="footnote-ref" id="fnref48"><sup>48</sup></a></h2>
 <p>Steemit是一个<a href="https://steemit.com/cn/@tumutanzi/5drdhx-steemit">言论自由的写作发布平台</a>，但这不代表这里没有规则。Steemit官方和开发者都没有提供相应的文章写作发布礼仪规则，幸运的是， <a href="https://steemit.com/@thecryptofiend">@thecryptofiend</a> 写了一篇非常不错的Steemit世界礼仪规则完整版，我认为新老用户都应该熟悉，这对所有人都有好处。</p>
 <p>我个人觉得，这些礼仪规则不只适应Steemit，也是我们每天现实生活和线上生活的礼仪原则。礼貌是世界通行证。经 <a href="https://steemit.com/@thecryptofiend">@thecryptofiend</a> 授权（英文版权和本文中所有图片都来源于原作者），我将这些礼仪规则由<a href="https://steemit.com/steemit/@thecryptofiend/the-complete-steemit-etiquette-guide-revision-2-0">英文The Complete Steemit Etiquette Guide (Revision 2.0)</a>翻译成中文，希望对所有中文用户有所帮助。</p>
 <p>1 不要发完文章就离开</p>
@@ -523,7 +525,7 @@
 </div>
 </div>
 <div id="section-7.4" class="section level2">
-<h2><span class="header-section-number">7.4</span> 关于偷窃 <a href="#fn48" class="footnote-ref" id="fnref48"><sup>48</sup></a></h2>
+<h2><span class="header-section-number">7.4</span> 关于偷窃 <a href="#fn49" class="footnote-ref" id="fnref49"><sup>49</sup></a></h2>
 <p>在加入STEEM之后，你可能会看到别人单篇文章收益就那么高，所以萌生了每天发很多篇来获得更多收益的想法，而这多篇文章怎么来，你可能会去其他网站上直接拷贝粘贴过来，或者未经作者同意直接转载过来，又或者摘取别人的文章段落然后东拼西凑/改改措施/颠倒顺序发出一篇文章，俗称洗稿。</p>
 <p>如果你已经有这样的想法，请务必不要行动；如果你已经在做了，请停止。因为这些行为统称为剽窃。</p>
 <ul>
@@ -567,7 +569,7 @@
 <h2><span class="header-section-number">7.5</span> 健康心态</h2>
 </div>
 <div id="steemit" class="section level2">
-<h2><span class="header-section-number">7.6</span> 如何克服steemit成瘾现象 <a href="#fn49" class="footnote-ref" id="fnref49"><sup>49</sup></a></h2>
+<h2><span class="header-section-number">7.6</span> 如何克服steemit成瘾现象 <a href="#fn50" class="footnote-ref" id="fnref50"><sup>50</sup></a></h2>
 <p>写这篇文章的时候，我对着跳动的光标，发呆了很久。是的，我今天要讲steemit成瘾这个问题。</p>
 <p>加入steemit的原因有很多种：有的人因为知名博主 @tumutanzi振臂高呼下奔着“Monkey Talks·笔下生金”，涌入这里认为可以在这里可以掘人生第一桶金的；有的人才华横溢（画画、手工制作、写作、唱歌等），人的人热爱分享生活（美食、美景、萌宠等），他们在这里找到一个志同道合的平台；也有人是为了逃避现实，他们也许生活不如意，有也许不善于社交（现实和虚拟世界的社交有差异），在这里找到生活的一个支点，防止现实生活中无处堆放的说话欲。</p>
 <p>我算是第二种和第三种的结合体。了解我的朋友，大致知道我是因为什么原因在1月初加入steemit的，这里极大程度的转移了我的注意力，这是件极好的事情。然而在1月底的时候，在家人的提醒下我发现自己出现了以下<strong>症状</strong>：</p>
@@ -605,10 +607,10 @@
 </div>
 <div class="footnotes">
 <hr />
-<ol start="47">
-<li id="fn47"><p>作者：@tumutanzi； 编辑：@dongfengman；校对： @meixia。原文链接：<a href="https://steemit.com/cn/@tumutanzi/6gkhr-steemit" class="uri">https://steemit.com/cn/@tumutanzi/6gkhr-steemit</a><a href="zysxp.html#fnref47" class="footnote-back">↩</a></p></li>
-<li id="fn48"><p>作者：@dongfengman<a href="zysxp.html#fnref48" class="footnote-back">↩</a></p></li>
-<li id="fn49"><p>作者：@vickylin<a href="zysxp.html#fnref49" class="footnote-back">↩</a></p></li>
+<ol start="48">
+<li id="fn48"><p>作者：@tumutanzi； 编辑：@dongfengman；校对： @meixia。原文链接：<a href="https://steemit.com/cn/@tumutanzi/6gkhr-steemit" class="uri">https://steemit.com/cn/@tumutanzi/6gkhr-steemit</a><a href="zysxp.html#fnref48" class="footnote-back">↩</a></p></li>
+<li id="fn49"><p>作者：@dongfengman<a href="zysxp.html#fnref49" class="footnote-back">↩</a></p></li>
+<li id="fn50"><p>作者：@vickylin<a href="zysxp.html#fnref50" class="footnote-back">↩</a></p></li>
 </ol>
 </div>
             </section>
