--- a/jqrp.html
+++ b/jqrp.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Steem 中文社区集体创作" />
 
 
-<meta name="date" content="2019-04-01" />
+<meta name="date" content="2019-04-17" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -125,9 +125,7 @@
 <li class="chapter" data-level="2.11" data-path="jbcsp-.html"><a href="jbcsp-.html#section-2.11"><i class="fa fa-check"></i><b>2.11</b> 禁忌和审核</a></li>
 <li class="chapter" data-level="2.12" data-path="jbcsp-.html"><a href="jbcsp-.html#section-2.12"><i class="fa fa-check"></i><b>2.12</b> 延伸阅读：自动点赞 </a></li>
 <li class="chapter" data-level="2.13" data-path="jbcsp-.html"><a href="jbcsp-.html#5"><i class="fa fa-check"></i><b>2.13</b> 延伸阅读：评论中的5点禁忌 </a></li>
-<li class="chapter" data-level="2.14" data-path="jbcsp-.html"><a href="jbcsp-.html#shadowsocks"><i class="fa fa-check"></i><b>2.14</b> 延伸阅读：如何傻瓜式使用shadowsocks科学上网 </a><ul>
-<li class="chapter" data-level="2.14.1" data-path="jbcsp-.html"><a href="jbcsp-.html#dapengsteemit-github"><i class="fa fa-check"></i><b>2.14.1</b> 如何参与dapeng《Steemit 教程》Github多人写作 </a></li>
-</ul></li>
+<li class="chapter" data-level="2.14" data-path="jbcsp-.html"><a href="jbcsp-.html#shadowsocks"><i class="fa fa-check"></i><b>2.14</b> 延伸阅读：如何傻瓜式使用shadowsocks科学上网 </a></li>
 </ul></li>
 <li class="chapter" data-level="3" data-path="cyczp.html"><a href="cyczp.html"><i class="fa fa-check"></i><b>3</b> 常用操作</a><ul>
 <li class="chapter" data-level="3.1" data-path="cyczp.html"><a href="cyczp.html#section-3.1"><i class="fa fa-check"></i><b>3.1</b> 关于互动的一切 </a></li>
@@ -209,9 +207,10 @@
 <li class="chapter" data-level="8.3" data-path="fcgjp.html"><a href="fcgjp.html#dapeng--steemr"><i class="fa fa-check"></i><b>8.3</b> dapeng 的 steemr </a></li>
 <li class="chapter" data-level="8.4" data-path="fcgjp.html"><a href="fcgjp.html#section-8.4"><i class="fa fa-check"></i><b>8.4</b> 其他工具</a><ul>
 <li class="chapter" data-level="8.4.1" data-path="fcgjp.html"><a href="fcgjp.html#section-8.4.1"><i class="fa fa-check"></i><b>8.4.1</b> 工具汇总站</a></li>
-<li class="chapter" data-level="8.4.2" data-path="fcgjp.html"><a href="fcgjp.html#steemworld.com"><i class="fa fa-check"></i><b>8.4.2</b> steemworld.com </a></li>
-<li class="chapter" data-level="8.4.3" data-path="fcgjp.html"><a href="fcgjp.html#steemd.com"><i class="fa fa-check"></i><b>8.4.3</b> steemd.com</a></li>
-<li class="chapter" data-level="8.4.4" data-path="fcgjp.html"><a href="fcgjp.html#steemdata.com"><i class="fa fa-check"></i><b>8.4.4</b> steemdata.com </a></li>
+<li class="chapter" data-level="8.4.2" data-path="fcgjp.html"><a href="fcgjp.html#tool-steemworld"><i class="fa fa-check"></i><b>8.4.2</b> steemworld.com </a></li>
+<li class="chapter" data-level="8.4.3" data-path="fcgjp.html"><a href="fcgjp.html#tool-steemd"><i class="fa fa-check"></i><b>8.4.3</b> steemd.com </a></li>
+<li class="chapter" data-level="8.4.4" data-path="fcgjp.html"><a href="fcgjp.html#tool-steem-data"><i class="fa fa-check"></i><b>8.4.4</b> steemdata.com </a></li>
+<li class="chapter" data-level="8.4.5" data-path="fcgjp.html"><a href="fcgjp.html#tool-steem-keychain"><i class="fa fa-check"></i><b>8.4.5</b> Steem Keychain </a></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="9" data-path="zbwzp-.html"><a href="zbwzp-.html"><i class="fa fa-check"></i><b>9</b> 周边网站</a><ul>
@@ -387,7 +386,7 @@
 <div id="jqrp" class="section level1">
 <h1><span class="header-section-number">第12章</span> 机器人</h1>
 <div id="jqrzyxp" class="section level2">
-<h2><span class="header-section-number">12.1</span> 机器人之印象篇 <a href="#fn82" class="footnote-ref" id="fnref82"><sup>82</sup></a></h2>
+<h2><span class="header-section-number">12.1</span> 机器人之印象篇 <a href="#fn83" class="footnote-ref" id="fnref83"><sup>83</sup></a></h2>
 <div id="jqrgn" class="section level3">
 <h3><span class="header-section-number">12.1.1</span> 机器人概念</h3>
 <p>从广义上讲，凡是能够代替人类自动执行指定操作从而完成特定功能的，都可以被称为机器人。机器人可以是机械手、iRobot 等实体，也可以是无形的计算机程序。我们将 Steem 上的机器人定义为：“<strong>能够操控 Steem 帐户执行点赞、留言、发帖、操控内部市场等一个或多个功能的计算机程序</strong>”。不难理解， Steem 机器人往往都是与某个特定 Steem 帐户挂钩的。这就是为什么我们经常会听到“某某帐户是机器人”这一说法。事实上，更准确地表达是“某某帐户的行为是由某一个计算机程序来控制的”。这些计算机程序对读者来说是无形的，它依托 Steem 帐户进行物化。除非特殊说明，我们将沿用这一习惯，<strong>将机器人物化为与计算机程序挂钩的 Steem 帐户</strong>。</p>
@@ -470,8 +469,8 @@
 </div>
 <div class="footnotes">
 <hr />
-<ol start="82">
-<li id="fn82"><p>作者：@wangwenjing；编辑：@dapeng<a href="jqrp.html#fnref82" class="footnote-back">↩</a></p></li>
+<ol start="83">
+<li id="fn83"><p>作者：@wangwenjing；编辑：@dapeng<a href="jqrp.html#fnref83" class="footnote-back">↩</a></p></li>
 </ol>
 </div>
             </section>
