--- a/jbcsp-.html
+++ b/jbcsp-.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Steem 中文社区集体创作" />
 
 
-<meta name="date" content="2019-04-01" />
+<meta name="date" content="2019-04-17" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -125,9 +125,7 @@
 <li class="chapter" data-level="2.11" data-path="jbcsp-.html"><a href="jbcsp-.html#section-2.11"><i class="fa fa-check"></i><b>2.11</b> 禁忌和审核</a></li>
 <li class="chapter" data-level="2.12" data-path="jbcsp-.html"><a href="jbcsp-.html#section-2.12"><i class="fa fa-check"></i><b>2.12</b> 延伸阅读：自动点赞 </a></li>
 <li class="chapter" data-level="2.13" data-path="jbcsp-.html"><a href="jbcsp-.html#5"><i class="fa fa-check"></i><b>2.13</b> 延伸阅读：评论中的5点禁忌 </a></li>
-<li class="chapter" data-level="2.14" data-path="jbcsp-.html"><a href="jbcsp-.html#shadowsocks"><i class="fa fa-check"></i><b>2.14</b> 延伸阅读：如何傻瓜式使用shadowsocks科学上网 </a><ul>
-<li class="chapter" data-level="2.14.1" data-path="jbcsp-.html"><a href="jbcsp-.html#dapengsteemit-github"><i class="fa fa-check"></i><b>2.14.1</b> 如何参与dapeng《Steemit 教程》Github多人写作 </a></li>
-</ul></li>
+<li class="chapter" data-level="2.14" data-path="jbcsp-.html"><a href="jbcsp-.html#shadowsocks"><i class="fa fa-check"></i><b>2.14</b> 延伸阅读：如何傻瓜式使用shadowsocks科学上网 </a></li>
 </ul></li>
 <li class="chapter" data-level="3" data-path="cyczp.html"><a href="cyczp.html"><i class="fa fa-check"></i><b>3</b> 常用操作</a><ul>
 <li class="chapter" data-level="3.1" data-path="cyczp.html"><a href="cyczp.html#section-3.1"><i class="fa fa-check"></i><b>3.1</b> 关于互动的一切 </a></li>
@@ -209,9 +207,10 @@
 <li class="chapter" data-level="8.3" data-path="fcgjp.html"><a href="fcgjp.html#dapeng--steemr"><i class="fa fa-check"></i><b>8.3</b> dapeng 的 steemr </a></li>
 <li class="chapter" data-level="8.4" data-path="fcgjp.html"><a href="fcgjp.html#section-8.4"><i class="fa fa-check"></i><b>8.4</b> 其他工具</a><ul>
 <li class="chapter" data-level="8.4.1" data-path="fcgjp.html"><a href="fcgjp.html#section-8.4.1"><i class="fa fa-check"></i><b>8.4.1</b> 工具汇总站</a></li>
-<li class="chapter" data-level="8.4.2" data-path="fcgjp.html"><a href="fcgjp.html#steemworld.com"><i class="fa fa-check"></i><b>8.4.2</b> steemworld.com </a></li>
-<li class="chapter" data-level="8.4.3" data-path="fcgjp.html"><a href="fcgjp.html#steemd.com"><i class="fa fa-check"></i><b>8.4.3</b> steemd.com</a></li>
-<li class="chapter" data-level="8.4.4" data-path="fcgjp.html"><a href="fcgjp.html#steemdata.com"><i class="fa fa-check"></i><b>8.4.4</b> steemdata.com </a></li>
+<li class="chapter" data-level="8.4.2" data-path="fcgjp.html"><a href="fcgjp.html#tool-steemworld"><i class="fa fa-check"></i><b>8.4.2</b> steemworld.com </a></li>
+<li class="chapter" data-level="8.4.3" data-path="fcgjp.html"><a href="fcgjp.html#tool-steemd"><i class="fa fa-check"></i><b>8.4.3</b> steemd.com </a></li>
+<li class="chapter" data-level="8.4.4" data-path="fcgjp.html"><a href="fcgjp.html#tool-steem-data"><i class="fa fa-check"></i><b>8.4.4</b> steemdata.com </a></li>
+<li class="chapter" data-level="8.4.5" data-path="fcgjp.html"><a href="fcgjp.html#tool-steem-keychain"><i class="fa fa-check"></i><b>8.4.5</b> Steem Keychain </a></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="9" data-path="zbwzp-.html"><a href="zbwzp-.html"><i class="fa fa-check"></i><b>9</b> 周边网站</a><ul>
@@ -1098,54 +1097,7 @@ Enjoy it!</code></pre>
 <p>1、当然，购买现成的服务也不是不可以，优点是出了问题有客服可以解决（如果没有跑路的话），缺点是树大招风，比较容易被GFW检测到。再者，很多都存在超售现象，网速得不到保证；</p>
 <p>2、如果自己搭建，建议将默认的SSH端口换成别的。我刚开始运行自己服务器，才半天就被攻击了六千余次，吓到半死。如果被暴力破解，很可能会变成肉鸡；</p>
 <p>3、几个朋友共享梯子倒还好，但不推荐以此为生。之前在推特上看到，某梯子商家被判刑了。我认识的几个卖梯子的“个体户”现在不是停止服务，就是低调的一塌糊涂。</p>
-<div id="dapengsteemit-github" class="section level3">
-<h3><span class="header-section-number">2.14.1</span> 如何参与dapeng《Steemit 教程》Github多人写作 <a href="#fn27" class="footnote-ref" id="fnref27"><sup>27</sup></a></h3>
-<p>第一步：注册github用户，不写了</p>
-<p>第二步：导入写书的项目</p>
-<p>（这一步不要问我怎么建仓库，注册完第一步，你就可以建立仓库，然后把git地址告诉别人，别人就可以pull下来，和本教程一样）</p>
-<div class="figure">
-<img src="images/02-github-1.png" alt="1.png" />
-<p class="caption">1.png</p>
-</div>
-<p>填写dapeng的git项目地址</p>
-<div class="figure">
-<img src="images/02-github-2.png" alt="2.png" />
-<p class="caption">2.png</p>
-</div>
-<p>导入好后就是这样</p>
-<div class="figure">
-<img src="images/02-github-3.png" alt="3.png" />
-<p class="caption">3.png</p>
-</div>
-<p>第三步：编辑你的内容</p>
-<div class="figure">
-<img src="images/02-github-4.png" alt="4.png" />
-<p class="caption">4.png</p>
-</div>
-<p>编辑的样子：</p>
-<div class="figure">
-<img src="images/02-github-5.png" alt="5.png" />
-<p class="caption">5.png</p>
-</div>
-<p>也可以添加文档</p>
-<div class="figure">
-<img src="images/02-github-6.png" alt="8.png" />
-<p class="caption">8.png</p>
-</div>
-<p>第四步：提交</p>
-<p>这个页面拖到最下面，写好变更原因后提交</p>
-<div class="figure">
-<img src="images/02-github-7.png" alt="6.png" />
-<p class="caption">6.png</p>
-</div>
-<p>第五步：查看提交，进入到写书项目发起人的仓库，就可以看到提交的内容了，是不是很简单</p>
-<div class="figure">
-<img src="images/02-github-8.png" alt="7.png" />
-<p class="caption">7.png</p>
-</div>
-<p>请随时查看页面顶部，是在哪一个人的仓库下面</p>
 
-</div>
 </div>
 </div>
 <div class="footnotes">
@@ -1166,7 +1118,6 @@ Enjoy it!</code></pre>
 <li id="fn24"><p>作者：@dapeng；编辑：@vickylin;<a href="jbcsp-.html#fnref24" class="footnote-back">↩</a></p></li>
 <li id="fn25"><p>作者：@vickylin；编辑：@vickylin; 校对：@meixia<a href="jbcsp-.html#fnref25" class="footnote-back">↩</a></p></li>
 <li id="fn26"><p>作者：@vickylin；编辑：@vickylin<a href="jbcsp-.html#fnref26" class="footnote-back">↩</a></p></li>
-<li id="fn27"><p>作者：@evathinking，编辑：@robertyan，原文链接：<a href="https://steemit.com/github/@evathinking/github" class="uri">https://steemit.com/github/@evathinking/github</a><a href="jbcsp-.html#fnref27" class="footnote-back">↩</a></p></li>
 </ol>
 </div>
             </section>
