--- a/wzxzp.html
+++ b/wzxzp.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Steem 中文社区集体创作" />
 
 
-<meta name="date" content="2019-04-01" />
+<meta name="date" content="2019-04-17" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -125,9 +125,7 @@
 <li class="chapter" data-level="2.11" data-path="jbcsp-.html"><a href="jbcsp-.html#section-2.11"><i class="fa fa-check"></i><b>2.11</b> 禁忌和审核</a></li>
 <li class="chapter" data-level="2.12" data-path="jbcsp-.html"><a href="jbcsp-.html#section-2.12"><i class="fa fa-check"></i><b>2.12</b> 延伸阅读：自动点赞 </a></li>
 <li class="chapter" data-level="2.13" data-path="jbcsp-.html"><a href="jbcsp-.html#5"><i class="fa fa-check"></i><b>2.13</b> 延伸阅读：评论中的5点禁忌 </a></li>
-<li class="chapter" data-level="2.14" data-path="jbcsp-.html"><a href="jbcsp-.html#shadowsocks"><i class="fa fa-check"></i><b>2.14</b> 延伸阅读：如何傻瓜式使用shadowsocks科学上网 </a><ul>
-<li class="chapter" data-level="2.14.1" data-path="jbcsp-.html"><a href="jbcsp-.html#dapengsteemit-github"><i class="fa fa-check"></i><b>2.14.1</b> 如何参与dapeng《Steemit 教程》Github多人写作 </a></li>
-</ul></li>
+<li class="chapter" data-level="2.14" data-path="jbcsp-.html"><a href="jbcsp-.html#shadowsocks"><i class="fa fa-check"></i><b>2.14</b> 延伸阅读：如何傻瓜式使用shadowsocks科学上网 </a></li>
 </ul></li>
 <li class="chapter" data-level="3" data-path="cyczp.html"><a href="cyczp.html"><i class="fa fa-check"></i><b>3</b> 常用操作</a><ul>
 <li class="chapter" data-level="3.1" data-path="cyczp.html"><a href="cyczp.html#section-3.1"><i class="fa fa-check"></i><b>3.1</b> 关于互动的一切 </a></li>
@@ -209,9 +207,10 @@
 <li class="chapter" data-level="8.3" data-path="fcgjp.html"><a href="fcgjp.html#dapeng--steemr"><i class="fa fa-check"></i><b>8.3</b> dapeng 的 steemr </a></li>
 <li class="chapter" data-level="8.4" data-path="fcgjp.html"><a href="fcgjp.html#section-8.4"><i class="fa fa-check"></i><b>8.4</b> 其他工具</a><ul>
 <li class="chapter" data-level="8.4.1" data-path="fcgjp.html"><a href="fcgjp.html#section-8.4.1"><i class="fa fa-check"></i><b>8.4.1</b> 工具汇总站</a></li>
-<li class="chapter" data-level="8.4.2" data-path="fcgjp.html"><a href="fcgjp.html#steemworld.com"><i class="fa fa-check"></i><b>8.4.2</b> steemworld.com </a></li>
-<li class="chapter" data-level="8.4.3" data-path="fcgjp.html"><a href="fcgjp.html#steemd.com"><i class="fa fa-check"></i><b>8.4.3</b> steemd.com</a></li>
-<li class="chapter" data-level="8.4.4" data-path="fcgjp.html"><a href="fcgjp.html#steemdata.com"><i class="fa fa-check"></i><b>8.4.4</b> steemdata.com </a></li>
+<li class="chapter" data-level="8.4.2" data-path="fcgjp.html"><a href="fcgjp.html#tool-steemworld"><i class="fa fa-check"></i><b>8.4.2</b> steemworld.com </a></li>
+<li class="chapter" data-level="8.4.3" data-path="fcgjp.html"><a href="fcgjp.html#tool-steemd"><i class="fa fa-check"></i><b>8.4.3</b> steemd.com </a></li>
+<li class="chapter" data-level="8.4.4" data-path="fcgjp.html"><a href="fcgjp.html#tool-steem-data"><i class="fa fa-check"></i><b>8.4.4</b> steemdata.com </a></li>
+<li class="chapter" data-level="8.4.5" data-path="fcgjp.html"><a href="fcgjp.html#tool-steem-keychain"><i class="fa fa-check"></i><b>8.4.5</b> Steem Keychain </a></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="9" data-path="zbwzp-.html"><a href="zbwzp-.html"><i class="fa fa-check"></i><b>9</b> 周边网站</a><ul>
@@ -387,7 +386,7 @@
 <div id="wzxzp" class="section level1">
 <h1><span class="header-section-number">第5章</span> 文章写作</h1>
 <div id="section-5.1" class="section level2">
-<h2><span class="header-section-number">5.1</span> 如何开始你的写作 <a href="#fn38" class="footnote-ref" id="fnref38"><sup>38</sup></a></h2>
+<h2><span class="header-section-number">5.1</span> 如何开始你的写作 <a href="#fn37" class="footnote-ref" id="fnref37"><sup>37</sup></a></h2>
 <p>小雅在Steemit上写作也有一段时间了，各种各样题材的文章也写过了。但是小雅心里还是存在着一个困惑，就是到底Steemit上面适合写点什么？</p>
 <p>表面上看，Steemit非常的自由，想要写什么就写什么，没有任何的限制。但是实际上呢，一些无聊的口水文根本得不到点赞，甚至有人会踩，把这里当成心情日记本就不太合适。小雅也不知道自己到底写点什么才是最适合这里的，所以她决定慢慢的探索，各种类型的文章都尝试写一点，都尝试过之后再选择自己最喜欢和最受欢迎的文章作为自己的主打。</p>
 <p>决定了写作方向之后，小雅又开始默默的写文章了。</p>
@@ -538,7 +537,7 @@ Steemit团队有可能掏钱跑路？</p>
 <hr />
 <p>可能很多新人会和小雅一样，来到steemit之后一段时间后，在热情消退之后看着自己不怎么增加的收益，慢慢就会灰心起来。这是人之常情，很正常，请你不要放弃，坚持写作，你的成果会慢慢的体现出来的，下面我们来看看一些前辈的经验，看看他们是如何端正心态的。</p>
 <div id="section-5.4.1" class="section level3">
-<h3><span class="header-section-number">5.4.1</span> 莫忘初衷 <a href="#fn39" class="footnote-ref" id="fnref39"><sup>39</sup></a></h3>
+<h3><span class="header-section-number">5.4.1</span> 莫忘初衷 <a href="#fn38" class="footnote-ref" id="fnref38"><sup>38</sup></a></h3>
 <p>前一阵子，有个朋友听我介绍，在Steemit写文章也许可以获得不错的收入，于是也加入进来。当时她在国内申请账号没有成功，我好心帮她申请了一个账号。</p>
 <p>刚开始，她兴冲冲地写了几篇文章，有时认真到写到后半夜，期间个别文章也偶尔得到几十美元点赞收入，我甚至都帮忙提现了。但后来有几篇没有什么点赞，到最近一段，也不知什么原因，干脆就不写了。</p>
 <p>鉴于账号是我申请的，我于是随意问了她一句，没想到她暂停的原因居然如此直白：</p>
@@ -555,7 +554,7 @@ Steemit团队有可能掏钱跑路？</p>
 <p>否则，从一开始就不要写。</p>
 </div>
 <div id="section-5.4.2" class="section level3">
-<h3><span class="header-section-number">5.4.2</span> 你的文字写给谁看？ <a href="#fn40" class="footnote-ref" id="fnref40"><sup>40</sup></a></h3>
+<h3><span class="header-section-number">5.4.2</span> 你的文字写给谁看？ <a href="#fn39" class="footnote-ref" id="fnref39"><sup>39</sup></a></h3>
 <p>不少朋友来到Steemit写作，其中相当多一部分人是为了赚取一部分点赞收入。写得好又有人点赞的话，确实收入可观，至少目前的确如此。</p>
 <p>因此，你辛苦码好字后，就苦苦地等着有人来点赞。我听说，有的人甚至达到没有人来点赞都快睡不着觉的状态。我想这可能是中毒太深了。本末倒置了。</p>
 <p>你的文字写给谁看？极端地说，假如没有一个人来看，你还应该写下去吗？你可能会说：不。换句话说，一个人认真写字，即使没有人看，这件事还有意义吗？</p>
@@ -581,10 +580,10 @@ Steemit团队有可能掏钱跑路？</p>
 
 <div class="footnotes">
 <hr />
-<ol start="38">
-<li id="fn38"><p>作者:@rivalhw;小故事:@maiyude;编辑:@maiyude;<a href="wzxzp.html#fnref38" class="footnote-back">↩</a></p></li>
-<li id="fn39"><p>作者:@:tumutanzi;小故事:@maiyude;编辑:@maiyude;<a href="wzxzp.html#fnref39" class="footnote-back">↩</a></p></li>
-<li id="fn40"><p>作者:@:tumutanzi;<a href="wzxzp.html#fnref40" class="footnote-back">↩</a></p></li>
+<ol start="37">
+<li id="fn37"><p>作者:@rivalhw;小故事:@maiyude;编辑:@maiyude;<a href="wzxzp.html#fnref37" class="footnote-back">↩</a></p></li>
+<li id="fn38"><p>作者:@:tumutanzi;小故事:@maiyude;编辑:@maiyude;<a href="wzxzp.html#fnref38" class="footnote-back">↩</a></p></li>
+<li id="fn39"><p>作者:@:tumutanzi;<a href="wzxzp.html#fnref39" class="footnote-back">↩</a></p></li>
 </ol>
 </div>
             </section>
