--- a/xsdyb.html
+++ b/xsdyb.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Steem 中文社区集体创作" />
 
 
-<meta name="date" content="2019-04-01" />
+<meta name="date" content="2019-04-17" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -125,9 +125,7 @@
 <li class="chapter" data-level="2.11" data-path="jbcsp-.html"><a href="jbcsp-.html#section-2.11"><i class="fa fa-check"></i><b>2.11</b> 禁忌和审核</a></li>
 <li class="chapter" data-level="2.12" data-path="jbcsp-.html"><a href="jbcsp-.html#section-2.12"><i class="fa fa-check"></i><b>2.12</b> 延伸阅读：自动点赞 </a></li>
 <li class="chapter" data-level="2.13" data-path="jbcsp-.html"><a href="jbcsp-.html#5"><i class="fa fa-check"></i><b>2.13</b> 延伸阅读：评论中的5点禁忌 </a></li>
-<li class="chapter" data-level="2.14" data-path="jbcsp-.html"><a href="jbcsp-.html#shadowsocks"><i class="fa fa-check"></i><b>2.14</b> 延伸阅读：如何傻瓜式使用shadowsocks科学上网 </a><ul>
-<li class="chapter" data-level="2.14.1" data-path="jbcsp-.html"><a href="jbcsp-.html#dapengsteemit-github"><i class="fa fa-check"></i><b>2.14.1</b> 如何参与dapeng《Steemit 教程》Github多人写作 </a></li>
-</ul></li>
+<li class="chapter" data-level="2.14" data-path="jbcsp-.html"><a href="jbcsp-.html#shadowsocks"><i class="fa fa-check"></i><b>2.14</b> 延伸阅读：如何傻瓜式使用shadowsocks科学上网 </a></li>
 </ul></li>
 <li class="chapter" data-level="3" data-path="cyczp.html"><a href="cyczp.html"><i class="fa fa-check"></i><b>3</b> 常用操作</a><ul>
 <li class="chapter" data-level="3.1" data-path="cyczp.html"><a href="cyczp.html#section-3.1"><i class="fa fa-check"></i><b>3.1</b> 关于互动的一切 </a></li>
@@ -209,9 +207,10 @@
 <li class="chapter" data-level="8.3" data-path="fcgjp.html"><a href="fcgjp.html#dapeng--steemr"><i class="fa fa-check"></i><b>8.3</b> dapeng 的 steemr </a></li>
 <li class="chapter" data-level="8.4" data-path="fcgjp.html"><a href="fcgjp.html#section-8.4"><i class="fa fa-check"></i><b>8.4</b> 其他工具</a><ul>
 <li class="chapter" data-level="8.4.1" data-path="fcgjp.html"><a href="fcgjp.html#section-8.4.1"><i class="fa fa-check"></i><b>8.4.1</b> 工具汇总站</a></li>
-<li class="chapter" data-level="8.4.2" data-path="fcgjp.html"><a href="fcgjp.html#steemworld.com"><i class="fa fa-check"></i><b>8.4.2</b> steemworld.com </a></li>
-<li class="chapter" data-level="8.4.3" data-path="fcgjp.html"><a href="fcgjp.html#steemd.com"><i class="fa fa-check"></i><b>8.4.3</b> steemd.com</a></li>
-<li class="chapter" data-level="8.4.4" data-path="fcgjp.html"><a href="fcgjp.html#steemdata.com"><i class="fa fa-check"></i><b>8.4.4</b> steemdata.com </a></li>
+<li class="chapter" data-level="8.4.2" data-path="fcgjp.html"><a href="fcgjp.html#tool-steemworld"><i class="fa fa-check"></i><b>8.4.2</b> steemworld.com </a></li>
+<li class="chapter" data-level="8.4.3" data-path="fcgjp.html"><a href="fcgjp.html#tool-steemd"><i class="fa fa-check"></i><b>8.4.3</b> steemd.com </a></li>
+<li class="chapter" data-level="8.4.4" data-path="fcgjp.html"><a href="fcgjp.html#tool-steem-data"><i class="fa fa-check"></i><b>8.4.4</b> steemdata.com </a></li>
+<li class="chapter" data-level="8.4.5" data-path="fcgjp.html"><a href="fcgjp.html#tool-steem-keychain"><i class="fa fa-check"></i><b>8.4.5</b> Steem Keychain </a></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="9" data-path="zbwzp-.html"><a href="zbwzp-.html"><i class="fa fa-check"></i><b>9</b> 周边网站</a><ul>
