Update the book

--- a/fcgjp.html
+++ b/fcgjp.html
@@ -1620,7 +1620,7 @@ Power Up：
 <li id="fn72"><p>作者：@ericet, 原文链接：<a href="https://steemit.com/@ericet/steem-steemworld" class="uri">https://steemit.com/@ericet/steem-steemworld</a><a href="fcgjp.html#fnref72" class="footnote-back">↩</a></p></li>
 <li id="fn73"><p>作者：@dapeng<a href="fcgjp.html#fnref73" class="footnote-back">↩</a></p></li>
 <li id="fn74"><p>steemdata 已于2018年5月1日关闭服务。<a href="fcgjp.html#fnref74" class="footnote-back">↩</a></p></li>
-<li id="fn75"><p>作者：@ericet，原文链接：<a href="https://steemit.com/cn/@ericet/steemkeychain-7n2z3fu72e，创作时间：2019年4月16日" class="uri">https://steemit.com/cn/@ericet/steemkeychain-7n2z3fu72e，创作时间：2019年4月16日</a><a href="fcgjp.html#fnref75" class="footnote-back">↩</a></p></li>
+<li id="fn75"><p>作者：@ericet，创作时间：2019年4月16日，原文链接：<a href="https://steemit.com/cn/@ericet/steemkeychain-7n2z3fu72e" class="uri">https://steemit.com/cn/@ericet/steemkeychain-7n2z3fu72e</a><a href="fcgjp.html#fnref75" class="footnote-back">↩</a></p></li>
 </ol>
 </div>
             </section>
